made good looking tables:

--- a/resurs.html
+++ b/resurs.html
@@ -41,8 +41,8 @@
       </section>
     </header>
     <main>
-      <section>
-        <!-- <h2>Персонал, техническая оснащенность</h2> -->
+      <section id="tables">
+        <h2>Персонал, техническая оснащенность</h2>
         <p>
           На сегодняшний день компания имеет укомплектованный штат
           инженерно-технических работников и специалистов, парк
@@ -54,356 +54,359 @@
           Казахстан и обеспечивают соблюдение договорных обязательств и
           утвержденного бюджета.
         </p>
-        <table>
-          <tr>
-            <th>Наименование</th>
-            <th>Количество</th>
-          </tr>
-          <tr>
-            <td>Главный инженер</td>
-            <td>1</td>
-          </tr>
-          <tr>
-            <td>Главный энергетик</td>
-            <td>1</td>
-          </tr>
-          <tr>
-            <td>Главный механик</td>
-            <td>1</td>
-          </tr>
-          <tr>
-            <td>Инженер по контролю Качества</td>
-            <td>2</td>
-          </tr>
-          <tr>
-            <td>Начальник ПТО</td>
-            <td>1</td>
-          </tr>
-          <tr>
-            <td>Начальник САО</td>
-            <td>1</td>
-          </tr>
-          <tr>
-            <td>Инженер по ОТ и ТБ</td>
-            <td>4</td>
-          </tr>
-          <tr>
-            <td>Инженер-сметчик</td>
-            <td>5</td>
-          </tr>
-          <tr>
-            <td>Геодезист</td>
-            <td>7</td>
-          </tr>
-          <tr>
-            <td>Инженер ПТО</td>
-            <td>7</td>
-          </tr>
-          <tr>
-            <td>Снабженец</td>
-            <td>4</td>
-          </tr>
-          <tr>
-            <td>Начальник участка</td>
-            <td>4</td>
-          </tr>
-          <tr>
-            <td>Прораб</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>Мастер участка</td>
-            <td>12</td>
-          </tr>
-          <tr>
-            <td>Электрогазосварщик 6 разряда</td>
-            <td>10</td>
-          </tr>
-          <tr>
-            <td>Электрогазосварщик 5 разряда</td>
-            <td>15</td>
-          </tr>
-          <tr>
-            <td>Электрогазосварщик 4 разряда</td>
-            <td>15</td>
-          </tr>
-          <tr>
-            <td>Газорезчик 5 разряда</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>Газорезчик 4 разряда</td>
-            <td>10</td>
-          </tr>
-          <tr>
-            <td>Газорезчик 3 разряда</td>
-            <td>10</td>
-          </tr>
-          <tr>
-            <td>Монтажник 5 разряда</td>
-            <td>15</td>
-          </tr>
-          <tr>
-            <td>Монтажник 4 разряда</td>
-            <td>15</td>
-          </tr>
-          <tr>
-            <td>Монтажник 3 разряда</td>
-            <td>15</td>
-          </tr>
-          <tr>
-            <td>Стропальщик</td>
-            <td>15</td>
-          </tr>
-          <tr>
-            <td>Каменщик 4-5 разряда</td>
-            <td>10</td>
-          </tr>
-          <tr>
-            <td>Кровельщик 4 разряда</td>
-            <td>10</td>
-          </tr>
-          <tr>
-            <td>Электромонтер 5 разряда</td>
-            <td>5</td>
-          </tr>
-          <tr>
-            <td>Бетонщик</td>
-            <td>30</td>
-          </tr>
-          <tr>
-            <td>Арматурчик</td>
-            <td>30</td>
-          </tr>
-          <tr>
-            <td>Разнорабочий</td>
-            <td>30</td>
-          </tr>
-          <tr>
-            <td>Плотник</td>
-            <td>3</td>
-          </tr>
-          <tr>
-            <td>Механик</td>
-            <td>3</td>
-          </tr>
-          <tr>
-            <td>Машинист погрузчика</td>
-            <td>3</td>
-          </tr>
-          <tr>
-            <td>Машинист автокрана 5 разряда</td>
-            <td>3</td>
-          </tr>
-          <tr>
-            <td>Тракторист машинист</td>
-            <td>2</td>
-          </tr>
-          <tr>
-            <td>Оператор компрессора</td>
-            <td>2</td>
-          </tr>
-          <tr>
-            <td>Водитель</td>
-            <td>7</td>
-          </tr>
-        </table>
+        <div class="tables">
+          <table>
+            <tr>
+              <th>Наименование</th>
+              <th>Количество</th>
+            </tr>
+            <tr>
+              <td>Главный инженер</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>Главный энергетик</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>Главный механик</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>Инженер по контролю Качества</td>
+              <td>2</td>
+            </tr>
+            <tr>
+              <td>Начальник ПТО</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>Начальник САО</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>Инженер по ОТ и ТБ</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>Инженер-сметчик</td>
+              <td>5</td>
+            </tr>
+            <tr>
+              <td>Геодезист</td>
+              <td>7</td>
+            </tr>
+            <tr>
+              <td>Инженер ПТО</td>
+              <td>7</td>
+            </tr>
+            <tr>
+              <td>Снабженец</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>Начальник участка</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>Прораб</td>
+              <td>8</td>
+            </tr>
+            <tr>
+              <td>Мастер участка</td>
+              <td>12</td>
+            </tr>
+            <tr>
+              <td>Электрогазосварщик 6 разряда</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>Электрогазосварщик 5 разряда</td>
+              <td>15</td>
+            </tr>
+            <tr>
+              <td>Электрогазосварщик 4 разряда</td>
+              <td>15</td>
+            </tr>
+            <tr>
+              <td>Газорезчик 5 разряда</td>
+              <td>8</td>
+            </tr>
+            <tr>
+              <td>Газорезчик 4 разряда</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>Газорезчик 3 разряда</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>Монтажник 5 разряда</td>
+              <td>15</td>
+            </tr>
+            <tr>
+              <td>Монтажник 4 разряда</td>
+              <td>15</td>
+            </tr>
+            <tr>
+              <td>Монтажник 3 разряда</td>
+              <td>15</td>
+            </tr>
+            <tr>
+              <td>Стропальщик</td>
+              <td>15</td>
+            </tr>
+            <tr>
+              <td>Каменщик 4-5 разряда</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>Кровельщик 4 разряда</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>Электромонтер 5 разряда</td>
+              <td>5</td>
+            </tr>
+            <tr>
+              <td>Бетонщик</td>
+              <td>30</td>
+            </tr>
+            <tr>
+              <td>Арматурчик</td>
+              <td>30</td>
+            </tr>
+            <tr>
+              <td>Разнорабочий</td>
+              <td>30</td>
+            </tr>
+            <tr>
+              <td>Плотник</td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>Механик</td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>Машинист погрузчика</td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>Машинист автокрана 5 разряда</td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>Тракторист машинист</td>
+              <td>2</td>
+            </tr>
+            <tr>
+              <td>Оператор компрессора</td>
+              <td>2</td>
+            </tr>
+            <tr>
+              <td>Водитель</td>
+              <td>7</td>
+            </tr>
+          </table>
+        </div>
+        <div class="tables">
+          <table>
+            <tr>
+              <td>Вид оборудования</td>
+              <td>Кол-во</td>
+              <td>Состояние</td>
+              <td>Собственное, арендованное</td>
+            </tr>
+            <tr>
+              <th colspan="4">Спец. техника</th>
+            </tr>
+            <tr>
+              <td>Автокран XCMG QY25K5S</td>
+              <td>1</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Автокран МАЗ</td>
+              <td>1</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Автоманипулятор</td>
+              <td>1</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Зил 431810</td>
+              <td>1</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Камаз 5320</td>
+              <td>1</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Камаз 5410</td>
+              <td>2</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Камаз 54112</td>
+              <td>1</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Самосвал Ncl 3258</td>
+              <td>2</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>УАЗ HANTER</td>
+              <td>2</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Фронтальный погрузчик LW300F</td>
+              <td>3</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Экскаватор HTL-120</td>
+              <td>1</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Экскаватор Samsung MX8W-2</td>
+              <td>1</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
 
-        <table>
-          <tr>
-            <td>Вид оборудования</td>
-            <td>Количество имеющихся единиц</td>
-            <td>Состояние</td>
-            <td>Собственное, арендованное</td>
-          </tr>
-          <tr>
-            <th colspan="4">Спец. техника</th>
-          </tr>
-          <tr>
-            <td>Автокран XCMG QY25K5S</td>
-            <td>1</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Автокран МАЗ</td>
-            <td>1</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Автоманипулятор</td>
-            <td>1</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Зил 431810</td>
-            <td>1</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Камаз 5320</td>
-            <td>1</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Камаз 5410</td>
-            <td>2</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Камаз 54112</td>
-            <td>1</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Самосвал Ncl 3258</td>
-            <td>2</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>УАЗ HANTER</td>
-            <td>2</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Фронтальный погрузчик LW300F</td>
-            <td>3</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Экскаватор HTL-120</td>
-            <td>1</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Экскаватор Samsung MX8W-2</td>
-            <td>1</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-
-          <tr>
-            <th colspan="4">Оборудование</th>
-          </tr>
-          <tr>
-            <td>Бетоносмеситель СБР150А</td>
-            <td>5</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Компрессорная станция ПКСД- 5Д5ДМУ1</td>
-            <td>3</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>САГ-2Г-1У</td>
-            <td>1</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Теодолит</td>
-            <td>2</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Вибратор глубинный ИВ 116А</td>
-            <td>10</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Виброплощадка</td>
-            <td>10</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Выпрямитель сварочный ВДМ-1202С</td>
-            <td>5</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Опалубка металлическая</td>
-            <td>2000м2</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Леса строительные</td>
-            <td>2000м2</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Магнитный сверлильный станок МАВ425</td>
-            <td>2</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Нивелир УОМЗ 4Н2КЛ</td>
-            <td>5</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Сварочный агрегат</td>
-            <td>6</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Сварочный генератор Р55016</td>
-            <td>2</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Тахеометр</td>
-            <td>5</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Трансформатор сварочный ТДМ- 303У2 220В/380В</td>
-            <td>2</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Трансформатор сварочный ТДМ-401У”</td>
-            <td>3</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Трансформатор ТСЗИ 380/220/42 2,5 кВт</td>
-            <td>2</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-          <tr>
-            <td>Мелкая механизация</td>
-            <td>в комплекте</td>
-            <td>Хорошее</td>
-            <td>Собственное</td>
-          </tr>
-        </table>
+            <tr>
+              <th colspan="4">Оборудование</th>
+            </tr>
+            <tr>
+              <td>Бетоносмеситель СБР150А</td>
+              <td>5</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Компрессорная станция ПКСД- 5Д5ДМУ1</td>
+              <td>3</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>САГ-2Г-1У</td>
+              <td>1</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Теодолит</td>
+              <td>2</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Вибратор глубинный ИВ 116А</td>
+              <td>10</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Виброплощадка</td>
+              <td>10</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Выпрямитель сварочный ВДМ-1202С</td>
+              <td>5</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Опалубка металлическая</td>
+              <td>2000м2</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Леса строительные</td>
+              <td>2000м2</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Магнитный сверлильный станок МАВ425</td>
+              <td>2</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Нивелир УОМЗ 4Н2КЛ</td>
+              <td>5</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Сварочный агрегат</td>
+              <td>6</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Сварочный генератор Р55016</td>
+              <td>2</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Тахеометр</td>
+              <td>5</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Трансформатор сварочный ТДМ- 303У2 220В/380В</td>
+              <td>2</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Трансформатор сварочный ТДМ-401У”</td>
+              <td>3</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Трансформатор ТСЗИ 380/220/42 2,5 кВт</td>
+              <td>2</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+            <tr>
+              <td>Мелкая механизация</td>
+              <td>в комплекте</td>
+              <td>Хорошее</td>
+              <td>Собственное</td>
+            </tr>
+          </table>
+        </div>
       </section>
     </main>
 
