--- a/uslugi.html
+++ b/uslugi.html
@@ -1,67 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <title>ACB</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/style.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <title>ACB</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.css" rel="stylesheet">
-</head>
-
-<body>
-  <div id="navbar">
-    <img src="images/Logo.svg" alt="logo">
-    <nav>
-      <a href="index.html">О компании</a>
-      <a href="uslugi.html">Услуги</a>
-      <a href="sertificates.html">Сертификаты</a>
-      <a href="resurs.html">Наши ресурсы</a>
-      <a href="obekti.html">Наши обьекты</a>
-      <a href="kontakts.html">Контакты</a>
-    </nav>
-    <input type="checkbox" id="hamburger">
-    <label for="hamburger" id="hm_label">
-      <hr>
-      <hr>
-      <hr>
-    </label>
-    <div class="menu">
-      <a href="index.html">О компании</a>
-      <a href="uslugi.html">Услуги</a>
-      <a href="sertificates.html">Сертификаты</a>
-      <a href="resurs.html">Наши ресурсы</a>
-      <a href="obekti.html">Наши обьекты</a>
-      <a href="kontakts.html">Контакты</a>
-    </div>
-  </div>
-  <header>
-    <section>
-      <div class="title">
-        <h1>Услуги</h1>
+  <body>
+    <div id="navbar">
+      <img src="images/Logo.svg" alt="logo" />
+      <nav>
+        <a href="index.html">О компании</a>
+        <a href="uslugi.html">Услуги</a>
+        <a href="sertificates.html">Сертификаты</a>
+        <a href="resurs.html">Наши ресурсы</a>
+        <a href="obekti.html">Наши обьекты</a>
+        <a href="kontakts.html">Контакты</a>
+      </nav>
+      <input type="checkbox" id="hamburger" />
+      <label for="hamburger" id="hm_label">
+        <hr />
+        <hr />
+        <hr />
+      </label>
+      <div class="menu">
+        <a href="index.html">О компании</a>
+        <a href="uslugi.html">Услуги</a>
+        <a href="sertificates.html">Сертификаты</a>
+        <a href="resurs.html">Наши ресурсы</a>
+        <a href="obekti.html">Наши обьекты</a>
+        <a href="kontakts.html">Контакты</a>
       </div>
-    </section>
-  </header>
-  <main>
-    <section>
-      <p>ТОО «Asia Capital Building» - строительная компания, специализирующаяся на выполнении общестроительных и
-        специальных работ по возведению зданий, сооружений, <br>производственных комплексов и складов любой сложности с
-        полным комплексом работ.</p>
-      <ul>
-        <li>Земляные работы, устройство фундаментов, стен и перекрытий</li>
-        <li>Монолитные работы, монтаж металлоконструкций</li>
-        <li>Монтаж внутренних и внешних инженерных сетей</li>
-        <li>Ремонтные и отделочные работы</li>
-        <li>Благоустройство территории</li>
-        <li>Дорожные работы</li>
-        <li>Монтаж технологического оборудования</li>
-      </ul>
-      <p>Год основания - 2006</p>
-    </section>
-  </main>
+    </div>
+    <header>
+      <section>
+        <div class="title">
+          <h1>Услуги</h1>
+        </div>
+      </section>
+    </header>
+    <main>
+      <section>
+        <h2>Наши Услуги</h2>
+        <p>
+          ТОО «Asia Capital Building» - строительная компания,
+          специализирующаяся на выполнении общестроительных и специальных работ
+          по возведению зданий, сооружений, <br />производственных комплексов и
+          складов любой сложности с полным комплексом работ.
+        </p>
+        <ul>
+          <li>Земляные работы, устройство фундаментов, стен и перекрытий</li>
+          <li>Монолитные работы, монтаж металлоконструкций</li>
+          <li>Монтаж внутренних и внешних инженерных сетей</li>
+          <li>Ремонтные и отделочные работы</li>
+          <li>Благоустройство территории</li>
+          <li>Дорожные работы</li>
+          <li>Монтаж технологического оборудования</li>
+        </ul>
+        <p>Год основания - 2006</p>
+      </section>
+    </main>
 
-  <footer>
-
-  </footer>
-</body>
-
+    <footer></footer>
+  </body>
 </html>
